# haskell-sliding-puzzle

./: Dockerfile  LICENSE  README.md  grid.cabal  haskell-sliding-puzzle.cabal
app/: Main.hs
src/: Board.hs  Game.hs
