name:                haskell-sliding-puzzle
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/sleongmgi/haskell-sliding-puzzle#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          sleong@wustl.edu
copyright:           2016 Shin Leong
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Board
                     , Game
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable haskell-sliding-puzzle-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , random
                     , haskell-sliding-puzzle
  default-language:    Haskell2010

test-suite haskell-sliding-puzzle-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bytestring
                     , random
                     , haskell-sliding-puzzle
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sleongmgi/haskell-sliding-puzzle.git
